<resources>
    <string name="app_name">Campus Adobe</string>
    <string name="email">Email</string>
    <string name="loginText">LogIn</string>
    <string name="signUpText">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>